[package]
name = "stream-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
egui = "0.34.2"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] } 
futures = "0.3.32"
irc = "1.1.0"
tokio = { version = "1.52.3", features = ["full"] }
twitch-irc = "6.0.0"
